--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -18,8 +18,10 @@
 
 .buttons {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  gap: 0.75rem;
 }
 
 .sections {
